# LibreriaDigital_TFG

./: CMakeLists.txt  ComoCompilar.txt  Makefile  cmake_install.cmake  library.cpp  library.def  library.h  libraryBasic.cpp  libraryBasic.h  libraryParallel.cpp  libraryParallel.h  librarySequential.cpp  librarySequential.h  toolchain-mingw32.cmake
